# fast-ai-course-utilities

./: .gitignore  CONTRIBUTING.rst  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
docs/: index.md  modules.md
fast_ai_course_utilities/: audio.py  data_structures.py  gdrive.py  imaging.py  ml.py
tests/: test_data_structures.py  test_foo.py
