[tool.poetry]
name = "fast_ai_course_utilities"
version = "0.0.1"
description = "Some utilities for the course as a package for easier re-use"
authors = ["Cam Stuart <fcam.asoftware@gmail.com>"]
repository = "https://github.com/camstuart/fast-ai-course-utilities"
documentation = "https://camstuart.github.io/fast-ai-course-utilities/"
readme = "README.md"
packages = [
  {include = "fast_ai_course_utilities"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ipython = "^8.13.2"
numpy = "^1.24.3"
scikit-image = "^0.21.0"
librosa = "^0.10.0.post2"
torchaudio = "^2.0.2"
pydub = "^0.25.1"
zipfile36 = "^0.1.3"
fastai = "^2.7.12"
jupyter = "^1.0.0"
dill = "^0.3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"
types-requests = "^2.31.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["fast_ai_course_utilities"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]



